--- a/index.html
+++ b/index.html
@@ -512,6 +512,9 @@
                     </svg>
                 </div>
             </div>
+            <div class="col-12">
+				<span>Strona powstała w procesie rekrutacyjnym dla agencji adRespect.pl</span>
+			</div>
         </div>
     </footer>
 
